--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
             </div>
-            <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-primary fw-bold m-0">ProMan</h1>
-            </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">Projects</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
@@ -83,7 +80,7 @@
                     <div class="typed-text d-none">Full Stack Developer, Web Developer, Front End Developer, Apps
                         Developer,Back-end Developer, </div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://www.canva.com/design/DAGGsR-vLbQ/3HgLjhorW4YseKcYUEcaJw/edit?utm_content=DAGGsR-vLbQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        <a href="https://www.canva.com/design/DAGNPga2AFI/Xix6-QexHPEDAFxofzQE0A/edit?utm_content=DAGNPga2AFI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                             class="btn btn-primary py-3 px-4 me-5">See My CV</a>
 
 
@@ -109,12 +106,13 @@
                         </div>
                     </div>
                     <p class="mb-4">
-                        A Full Stack Developer is a versatile programmer skilled in both front end and back end web
-                        development. They design website architecture, ensure responsiveness, collaborate with
-                        designers, and manage projects from start to finish. Key requirements include a degree in
-                        Computer Science, proficiency in HTML/CSS/JavaScript, and familiarity with frameworks like React
-                        and server-side languages such as Python or Java. Strong organizational skills, problem-solving
-                        abilities, and staying updated with web technologies are essential for this role.
+                        A Full Stack Developer proficient in Java is a
+                        versatile programmer skilled in both front-end and
+                        back-end development. They handle the complete
+                        lifecycle of web applications, ensuring seamless
+                        integration between user-facing interfaces and
+                        server-side functionalities.
+
                     </p>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -127,12 +125,15 @@
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
                     </div>
-                    <p class="mb-0"><b>’Game-warrior’</b>”Created a web-based project called ’ Game Warrior’ using HTML,
-                        CSS, and JavaScript,
+                    <p class="mb-0"><b>’Weather-app’</b>”A React.js weather app that fetches real-time weather data from
+                        an API and displays current conditions, temperature, and forecasts for a selected location. It
+                        features a clean UI with location search, unit conversion (Celsius/Fahrenheit), and responsive
+                        design for mobile and desktop. ,
                         implementing interactive features and engaging user experiences.</p>
-                    <p class="mb-0"><b>chocolate-tea’</b> ”Designed and developed the ’Chocolate-Tea’ project using
-                        HTML, CSS, and JavaScript
-                        to create an interactive web application showcasing chocolate and tea pairings with dynam</p>
+                    <br>
+                    <p class="mb-0"><b>Game-warrior’</b> ”Designed and developed the ’game-warrior’ project using
+                        HTML, CSS
+                        to create an interactive web application showcasing game-warrior pairings with dyname</p>
                 </div>
             </div>
         </div>
@@ -146,19 +147,16 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
-                            <h1 class="displays-1 mb-0">4</h1>
-                            <h5 class="mb-0">Month</h5>
+                            <h1 class="displays-1 mb-0">2023-2024</h1>
                         </div>
-                        <h3 class="lh-base mb-0">of working experience as a Dell Service</h3>
+                        <h3 class="lh-base mb-0">working experience as a java FSD trainer</h3>
                     </div>
-                    <p class="mb-4">Product Knowledge: Demonstrated comprehensive understanding of Dell's product line,
-                        including laptops, desktops, peripherals, and accessories.
-                        Customer Engagement: Proven ability to engage with customers effectively, providing detailed
-                        product information, addressing inquiries, and assisting in product selection.
+                    <p class="mb-4">
+                        A Java Full Stack Developer (FSD) trainer skilled in teaching both front-end (HTML, CSS,
+                        JavaScript, React) and back-end (Java, Spring Boot, REST APIs) technologies. They guide students
+                        through building full-fledged web applications, covering database management, version control,
+                        and deployment practices.
                         .</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Delivery</p>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
@@ -185,8 +183,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="display-5 mb-5">Skills</h1>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum
-                        amet diam ipsum clita dolor duo clita sit.</p>
+                    <p class="mb-4">Java Full Stack Based</p>
                     <h3 class="mb-4">My Skills</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
@@ -212,11 +209,21 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">JavaScript</h6>
+                                    <h6 class="font-weight-bold">Bootstrap</h6>
                                     <h6 class="font-weight-bold">90%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90"
+                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90"
+                                        aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="skill mb-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="font-weight-bold">JavaScript</h6>
+                                    <h6 class="font-weight-bold">89%</h6>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="89"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
@@ -265,16 +272,35 @@
                     <div id="tab-2" class="tab-pane fade show p-0">
                         <div class="row gy-5 gx-4">
                             <div class="col-sm-6">
+                                <h5> SSLC</h5>
+                                <hr class="text-primary my-2">
+                                <p class="text-primary mb-1">2018</p>
+                                <h6 class="mb-0">Government Higher Secondary School, Sholoyar Dam</h6>
+                            </div>
+                        <div class="col gy-5 gx-4">
+                            <div class="col-sm-6">
                                 <h5> H.S.C</h5>
                                 <hr class="text-primary my-2">
-                                <p class="text-primary mb-1">2018 - 2020</p>
-                                <h6 class="mb-0">Mathematics</h6>
+                                <p class="text-primary mb-1">2019 - 2020</p>
+                                <h6 class="mb-0">Government Higher Secondary School, Sholoyar Dam</h6>
                             </div>
+                        </div>
+                        <div class="row gy-5 gx-4">
+                            <div class="col-sm-6">
+                                <h5>Bachelor Of Information Technology</h5>
+                                <hr class="text-primary my-2">
+                                <p class="text-primary mb-1">2020 - 2023</p>
+                                <p class="text-primary mb-1">3-years</p>
+                                <h6 class="mb-0">Sree Ramu College Of Arts And Science</h6>
+                            </div>
+                        </div>
+                        <div class="col gy-5 gx-4">
                             <div class="col-sm-6">
                                 <h5>Full Stack Development</h5>
                                 <hr class="text-primary my-2">
-                                <p class="text-primary mb-1">2023 - 2023</p>
+                                <p class="text-primary mb-1">2023 - 2024</p>
                                 <p class="text-primary mb-1">6-Month</p>
+                                <p class="text-primary mb-1">1-Year Trainer [Java Full Stack]</p>
                                 <h6 class="mb-0">Fulcrum Tech</h6>
                             </div>
                         </div>
@@ -293,9 +319,6 @@
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
                     <h1 class="display-5 mb-0">My Services</h1>
-                </div>
-                <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="">Hire Me</a>
                 </div>
             </div>
             <div class="row g-4">
@@ -385,7 +408,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/traffic.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -396,7 +419,7 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/payslip.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -407,40 +430,40 @@
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/forms.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="./newimg/blog-banner.png" alt="" style="height: 50vh;">
+                        <img class="img-fluid" src="./img/light.jpg" alt="" style="height: 50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/blog-banner.png"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1"
+                                href="./img/light.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="./newimg/download.jpeg" alt="" style="height: 50vh;">
+                        <img class="img-fluid" src="./img/blog-banner.png" alt="" style="height: 50vh;">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/download.jpeg"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1"
+                                href="./img/blog-banner.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./htmljs/index.html"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="./newimg/" alt="">
+                        <img class="img-fluid" src="./img/drizzle.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./newimg/"
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="./img/drizzle.png"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="http://localhost:3000/"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -476,8 +499,8 @@
                             class="btn btn-square btn-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a href="https://github.com/gokulmano2003" class="btn btn-square btn-primary me-2" href=""><i
                                 class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/gokulbscit/" class="btn btn-square btn-primary me-2" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/gokulbscit/" class="btn btn-square btn-primary me-2"
+                            href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="d-flex pt-2" style="width: 100vh;"><iframe
